--- a/app/Resources/views/admin-v2/developer/developer-setting/index.html.twig
+++ b/app/Resources/views/admin-v2/developer/developer-setting/index.html.twig
@@ -240,6 +240,15 @@
     </div>
   </div>
 
+  <div class="form-group">
+    <div class="col-md-3 control-label">
+      <label>{{ 'admin.developer_setting.resource_api_server'|trans }}</label>
+    </div>
+    <div class="controls col-md-8 radios">
+      <input class="form-control" type="text" name="resource_api_server" value="{{ developerSetting.resource_api_server|default('') }}">
+    </div>
+  </div>
+
   <fieldset>
     <legend>云平台播放器配置</legend>
     <div class="form-group">
