--- a/app/Resources/views/admin-v2/developer/developer-setting/magic.html.twig
+++ b/app/Resources/views/admin-v2/developer/developer-setting/magic.html.twig
@@ -57,6 +57,7 @@
       <li>{{ 'admin.magic_setting.security_video_player'|trans }}： {% verbatim %}"security_video_player": 0{% endverbatim %}（{{ 'admin.magic_setting.one_for_open'|trans }}，{{ 'admin.magic_setting.zero_for_close'|trans }}）</li>
       <li>{{ 'admin.magic_setting.enable_marketing_mall_alpha_test'|trans }}： {% verbatim %}"enable_marketing_mall_alpha_test": 0{% endverbatim %}（{{ 'admin.magic_setting.one_for_open'|trans }}，{{ 'admin.magic_setting.zero_for_close'|trans }}）</li>
       <li>{{ 'admin.magic_setting.enable_marketing_mall_license'|trans }}： {% verbatim %}"enable_marketing_mall_license": 0{% endverbatim %}（{{ 'admin.magic_setting.one_for_open'|trans }}，{{ 'admin.magic_setting.zero_for_close'|trans }}）</li>
+      <li>{{ 'admin.magic_setting.enable_cache_video_on_playing'|trans }}： {% verbatim %}"enable_cache_video_on_playing": 0{% endverbatim %}（{{ 'admin.magic_setting.one_for_open'|trans }}，{{ 'admin.magic_setting.zero_for_close'|trans }}）</li>
     </ul>
 </div>
 
