--- a/app/Resources/views/admin-v2/user/user-manage/show-modal.html.twig
+++ b/app/Resources/views/admin-v2/user/user-manage/show-modal.html.twig
@@ -6,6 +6,13 @@
 
 <table class="table table-striped table-condenseda table-bordered">
   <tr>
+    <th width="25%">{{'user.fields.id'|trans}}</th>
+    <td width="75%">
+      {{ user.id }}
+    </td>
+  </tr>
+
+  <tr>
     <th width="25%">{{'user.fields.username_student_label'|trans}}</th>
     <td width="75%">
       <a class="pull-right" href="{{ user_show_path({id:user.id}) }}" target="_blank">{{'admin.user.fields.personal_menu_label'|trans}}</a>
