--- a/app/Resources/views/course/widgets/course-grid-new.html.twig
+++ b/app/Resources/views/course/widgets/course-grid-new.html.twig
@@ -4,7 +4,7 @@
   {% else %}
     {% set course = data('PublishedCourseByCourseSet',{ courseSetId: courseSet.id } ) %}
   {% endif %}
-  {% set videoMaxLevel = get_video_max_level(course) %}
+  {% set videoMaxLevel = get_video_max_level(course.id) %}
   {% if is_plugin_installed('Vip') and setting('vip.enabled') and course.vipLevelId|default(0) > 0 %}
     <span class="tag-vip-free"></span>
   {% endif %}
