--- a/app/Resources/views/course/task-list/parts/list-li-title-template.html.twig
+++ b/app/Resources/views/course/task-list/parts/list-li-title-template.html.twig
@@ -7,4 +7,6 @@
   {% endif %}
 {% endif %}
 <span display-if="{isOptional}" class="label label-info mr10">{{ 'course.catalogue.task_status.is_optional'|trans }}</span>
+<img display-if="{videoMaxLevel === '2k'}" src="/static-dist/app/img/task/video-transcode-2k.png" alt="2k">
+<img display-if="{videoMaxLevel === '4k'}" src="/static-dist/app/img/task/video-transcode-4k.png" alt="4k">
 {getTaskName}
