--- a/app/Resources/views/task/plugin/list/content.html.twig
+++ b/app/Resources/views/task/plugin/list/content.html.twig
@@ -31,9 +31,13 @@
         <tmp display-if="{isItemDisplayedAsOptional}">
           <span class="label label-info mrm">{{'course.plan_task.is_optional_task'|trans}}</span>
         </tmp>
-        
+
         <tmp hide-if="{isItemDisplayedAsOptional}">
-          {getTaskName}
+          <div style="display: flex; align-items: center;">
+            <img display-if="{is2kVideoLevel}" src="/static-dist/app/img/task/video-transcode-2k.png" alt="2k" style="height: 20px; margin-right: 8px">
+            <img display-if="{is4kVideoLevel}" src="/static-dist/app/img/task/video-transcode-4k.png" alt="4k" style="height: 20px; margin-right: 8px">
+            {getTaskName}
+          </div>
         </tmp>
 
         <tmp display-if="{isItemDisplayedAsOptional}">
@@ -58,7 +62,7 @@
       <tmp display-if="{isItemDisplayedAsUnpublished}">
         <span class="right-menu ">{{'course.catalogue.task_status.looking_forward'|trans}}</span>
       </tmp>
-      
+
       <tmp display-if="{isPublished}">
         <tmp display-if="{isTaskLocked}">
           <span class="right-menu mouse-leave">{activityLength}
