feat: #20250109 修改2k4k样式

--- a/h5/src/h5/assets/styles/containers/course/detail/afterjoin-directory.scss
+++ b/h5/src/h5/assets/styles/containers/course/detail/afterjoin-directory.scss
@@ -261,7 +261,7 @@
 		}
 
 		.zb-ks {
-			padding: 0 vw(15);
+			padding: 10px 12px;
 
 			.lesson-title-l {
 				line-height: vw(40);
@@ -269,7 +269,7 @@
 
 			.zbtime {
 				margin-top: vw(3);
-				margin-left: vw(26);
+				margin-left: 26px;
 				color: #408ffb;
 				font-size: vw(12);
 			}
