--- a/app/Resources/static-src/app/less/module/course-new.less
+++ b/app/Resources/static-src/app/less/module/course-new.less
@@ -30,10 +30,10 @@
     .course-tag {
       position: absolute;
       bottom: 0;
-      padding: 8px;
+      padding: 4px 6px;
       width: 100%;
-      font-size: 14px;
-      line-height: 20px;
+      font-size: 12px;
+      line-height: 12px;
       color: #fff;
       cursor: default;
       background-color: rgba(0, 0, 0, 0.4);
@@ -47,13 +47,11 @@
         vertical-align: text-bottom;
       }
       .course-tag__dot {
-        position: absolute;
-        top: 15px;
-        right: 6px;
         display: inline-block;
-        width: 5px;
-        height: 5px;
-        background-color: #20b573;
+        margin-right: 4px;
+        width: 4px;
+        height: 4px;
+        background-color: #60F1A3;
         border-radius: 100%;
         vertical-align: middle;
         @media (max-width: @screen-xs-min) {
