--- a/h5/src/h5/assets/styles/containers/course/detail/afterjoin-directory.scss
+++ b/h5/src/h5/assets/styles/containers/course/detail/afterjoin-directory.scss
@@ -213,6 +213,8 @@
 					.l22 {
 						.tryLes,
 						.freeAdmission {
+							height: fit-content;
+							white-space: nowrap;
 							vertical-align: middle;
 						}
 					}
