--- a/app/Resources/views/course/widgets/course-grid-new.html.twig
+++ b/app/Resources/views/course/widgets/course-grid-new.html.twig
@@ -17,10 +17,7 @@
         {% endif %}
       {% endif %}
       {% if courseSet.course.tryLookVideo|default(false) or courseSet.type|default() == 'reservation' or courseSet.type|default() == 'live' or courseSet.serializeMode != 'none'  %}
-        <div class="course-tag clearfix">
-          {% if courseSet.course.tryLookVideo|default(false) %}
-            <span><i class="es-icon es-icon-video color-white"></i>{{'site.badge.try_watch'|trans}}</span>
-          {% endif %}
+        <div class="{% if courseSet.type|default() == 'reservation' or courseSet.type|default() == 'live' or courseSet.serializeMode == 'serialized' or courseSet.serializeMode == 'finished' %}course-tag{% endif %} clearfix">
           <span class="pull-right">
             <span>{% if courseSet.type|default() == 'reservation' %}
               <span class="course-tag__dot"></span>{{ 'my.teaching.course_set.reservation'|trans }}
@@ -35,6 +32,9 @@
             {% endif %}</span>
           </span>
         </div>
+      {% endif %}
+      {% if courseSet.course.tryLookVideo|default(false) %}
+        <div style="position: absolute; top: 0; right: 0; border-radius: 0 4px 0 8px; color: #FFF; font-size: 12px; font-weight: 500; line-height: 20px; padding: 2px 8px; background: rgba(0, 0, 0, 0.40);"><i class="es-icon es-icon-video color-white" style="font-size: 12px; margin-right: 4px;"></i>{{'site.badge.try_watch'|trans}}</div>
       {% endif %}
       {% if is_plugin_installed('Vip') and setting('vip.enabled') and course.vipLevelId|default(0) > 0 %}
         <div style="position: absolute; z-index: 10; left: 0; bottom: 0; color: #FFF; font-size: 12px; font-weight: 500; line-height: 20px; padding: 2px 8px; border-radius: 0 12px 0 0; background: rgba(0, 0, 0, 0.80);">会员免费</div>
