--- a/app/Resources/views/classroom/course/list.html.twig
+++ b/app/Resources/views/classroom/course/list.html.twig
@@ -25,10 +25,10 @@
                 <div style="position: relative;">
                   {% set videoMaxLevel = get_video_max_level(course.id) %}
                   {% if videoMaxLevel == '2k' %}
-                    <img src="/static-dist/app/img/classroom/course/video-transcode-2k.png" alt="2k" style="height: 20px; width: 58px; position: absolute; left: 0; top: 0;">
+                    <div style="position: absolute; left: 0; bottom: 0; color: #FFF; font-size: 12px; font-weight: 500; line-height: 20px; padding: 2px 8px; background: rgba(0, 0, 0, 0.80); border-radius: 0 12px 0 0;">2K 优享</div>
                   {% endif %}
                   {% if videoMaxLevel == '4k' %}
-                    <img src="/static-dist/app/img/classroom/course/video-transcode-4k.png" alt="4k" style="height: 20px; width: 58px; position: absolute; left: 0; top: 0;">
+                    <div style="position: absolute; left: 0; bottom: 0; color: #492F0B; font-size: 12px; font-weight: 500; line-height: 20px; padding: 2px 8px; background: linear-gradient(270deg, #F7D27B -33.33%, #FCEABE 100%); border-radius: 0 12px 0 0;">4K 臻享</div>
                   {% endif %}
                   {{ lazy_img(filepath(course_cover(course, 'middle'), 'course.png'), '', '') }}
                 </div>
