--- a/h5/src/h5/assets/styles/containers/brush-exercise/directory/components/swiper-tab.scss
+++ b/h5/src/h5/assets/styles/containers/brush-exercise/directory/components/swiper-tab.scss
@@ -55,7 +55,7 @@
 	}
 
 	.brush-exercise-scroll {
-		padding: vw(16) 0;
+		padding: 16px 0;
 		padding-left: vw(16);
 		overflow-x: scroll;
 		white-space: nowrap;
@@ -67,7 +67,7 @@
 
 		button {
 			display: inline-block;
-			height: vw(28);
+			height: 28px;
 			margin-right: vw(32);
 			padding: 0 vw(16);
 			color: #666;
