--- a/h5/src/h5/assets/styles/containers/brush-exercise/directory/index.scss
+++ b/h5/src/h5/assets/styles/containers/brush-exercise/directory/index.scss
@@ -10,7 +10,7 @@
 		align-items: center;
 		justify-content: center;
 		width: vw(72);
-		height: vw(28);
+		height: 28px;
 		padding: 0 vw(0);
 		color: $primary-color;
 		border: vw(1) solid $primary-color;
