--- a/h5/src/h5/assets/styles/containers/brush-exercise/directory/components/exercise.scss
+++ b/h5/src/h5/assets/styles/containers/brush-exercise/directory/components/exercise.scss
@@ -7,7 +7,7 @@
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
-		padding: vw(12) 0;
+		padding: 12px 0;
 		font-size: vw(14);
 		border-bottom: vw(1) solid #f5f5f5;
 	}
