--- a/app/Resources/views/admin-v2/user/user-manage/staff-manage/show-modal.html.twig
+++ b/app/Resources/views/admin-v2/user/user-manage/staff-manage/show-modal.html.twig
@@ -6,7 +6,7 @@
 
   <table class="table table-striped table-condenseda table-bordered">
     <tr>
-      <th width="25%">{{'user.fields.id'|trans}}</th>
+      <th width="25%">{{'staff.fields.id'|trans}}</th>
       <td width="75%">
         {{ user.id }}
       </td>
