--- a/h5/src/h5/assets/styles/containers/brush-exercise/directory/components/exercise.scss
+++ b/h5/src/h5/assets/styles/containers/brush-exercise/directory/components/exercise.scss
@@ -1,6 +1,5 @@
 .brush-exercise-exercise {
-	margin-top: vw(-1);
-	padding: 0 vw(16);
+	padding: 16px;
 	background: #fff;
 
 	.directory-exercise {
