--- a/app/Resources/views/item-bank-exercise/tabs/list/chapter-list.html.twig
+++ b/app/Resources/views/item-bank-exercise/tabs/list/chapter-list.html.twig
@@ -1,4 +1,4 @@
-{% do script(['libs/jquery-sortable.js']) %}
+{#{% do script(['libs/jquery-sortable.js']) %}
 {% set record = [] %}
 <div class="course-detail-content js-course-detail-content">
   <ul id="sortable-list" class="task-list">
@@ -18,10 +18,13 @@
   <div class="empty js-task-empty {% if categoryTree %} hidden {% endif %}">
       {{'item_bank_exercise.chapter_exercise.category_empty'|trans}}
   </div>
-</div>
+</div>#}
 
 {% do script(['vue3/js/item-bank-exercise/tabs/list/index.js']) %}
 
 <div id="chapter-list"
      data-category-tree="{{ categoryTree|json_encode }}"
+     data-records="{{ records|json_encode }}"
+     data-preview-as="{{ previewAs }}"
+     data-member="{{ member|json_encode }}"
 ></div>
