--- a/app/Resources/views/item-bank-exercise/tabs/list/chapter-list.html.twig
+++ b/app/Resources/views/item-bank-exercise/tabs/list/chapter-list.html.twig
@@ -1,24 +1,24 @@
-{#{% do script(['libs/jquery-sortable.js']) %}
-{% set record = [] %}
-<div class="course-detail-content js-course-detail-content">
-  <ul id="sortable-list" class="task-list">
-    {% for key, item in categoryTree %}
-      {% if records|default(null) %}{% set record = records[item.id]|default(null)  %}{% endif %}
-      {% if questionCounts|default(null) %}{% set questionCount = questionCounts[item.id]|default(null)  %}{% endif %}
-      <div class="row">
-        {% if item.depth == 3 %}
-          {% include 'item-bank-exercise/tabs/list/chapter-lesson.html.twig' with {previewAs:previewAs,exercise: exercise, lesson: item, record: record} %}
-        {% else %}
-          {% include 'item-bank-exercise/tabs/list/chapter-item.html.twig' with {previewAs:previewAs,chapter:item, exercise:exercise, record: record} %}
-        {% endif %}
-      </div>
-    {% endfor %}
-  </ul>
+{#{% do script(['libs/jquery-sortable.js']) %}#}
+{#{% set record = [] %}#}
+{#<div class="course-detail-content js-course-detail-content">#}
+{#  <ul id="sortable-list" class="task-list">#}
+{#    {% for key, item in categoryTree %}#}
+{#      {% if records|default(null) %}{% set record = records[item.id]|default(null)  %}{% endif %}#}
+{#      {% if questionCounts|default(null) %}{% set questionCount = questionCounts[item.id]|default(null)  %}{% endif %}#}
+{#      <div class="row">#}
+{#        {% if item.depth == 3 %}#}
+{#          {% include 'item-bank-exercise/tabs/list/chapter-lesson.html.twig' with {previewAs:previewAs,exercise: exercise, lesson: item, record: record} %}#}
+{#        {% else %}#}
+{#          {% include 'item-bank-exercise/tabs/list/chapter-item.html.twig' with {previewAs:previewAs,chapter:item, exercise:exercise, record: record} %}#}
+{#        {% endif %}#}
+{#      </div>#}
+{#    {% endfor %}#}
+{#  </ul>#}
 
-  <div class="empty js-task-empty {% if categoryTree %} hidden {% endif %}">
-      {{'item_bank_exercise.chapter_exercise.category_empty'|trans}}
-  </div>
-</div>#}
+{#  <div class="empty js-task-empty {% if categoryTree %} hidden {% endif %}">#}
+{#      {{'item_bank_exercise.chapter_exercise.category_empty'|trans}}#}
+{#  </div>#}
+{#</div>#}
 
 {% do script(['vue3/js/item-bank-exercise/tabs/list/index.js']) %}
 
@@ -27,4 +27,6 @@
      data-records="{{ records|json_encode }}"
      data-preview-as="{{ previewAs }}"
      data-member="{{ member|json_encode }}"
+     data-exercise="{{ exercise|json_encode }}"
+     data-module-id="{{ moduleId }}"
 ></div>
