fix: #107243 修复默认主题b不显示轮播图

--- a/web/themes/default-b/views/default/index.html.twig
+++ b/web/themes/default-b/views/default/index.html.twig
@@ -1,7 +1,7 @@
 {% extends 'layout.html.twig' %}
 
 {% set bodyClass = 'homepage' %}
-{% do script(['libs/echo-js.js','defaultbtheme/js/default/index.js']) %}
+{% do script(['libs/echo-js.js','libs/jquery-cycle2.js','defaulttheme/js/default/index.js']) %}
 
 {% set consultDisplay = true %}
 
