--- a/app/Resources/views/admin-v2/user/user-manage/create-by-mobile-or-email-modal.html.twig
+++ b/app/Resources/views/admin-v2/user/user-manage/create-by-mobile-or-email-modal.html.twig
@@ -33,7 +33,7 @@
       </div>
       <div class="col-md-7 controls">
         <input type="password" id="password" name="password" class="form-control">
-        <p class="help-block">{{('admin.user.fields.password_hint.'~setting('auth.password_level')|default('low'))|trans}}</p>
+        <p class="help-block">{{ 'admin.user.fields.password_hint.high'|trans }}</p>
       </div>
     </div>
 
@@ -49,7 +49,6 @@
 
     {% include 'org/org-tree-select.html.twig' with {colmd:7,modal: 'modal'} %}
 
-    <input type="hidden" id="password_level" value="{{ setting('auth.password_level')|default('low') }}">
     <input type="hidden" name="_csrf_token" value="{{ csrf_token('site') }}">
 
   </form>
