--- a/app/Resources/views/password-reset/update.html.twig
+++ b/app/Resources/views/password-reset/update.html.twig
@@ -7,19 +7,19 @@
 		<div class="col-md-6 col-md-offset-3 ptl">
 			<div class="panel panel-default panel-page">
 				<div class="panel-heading"><h2>{{ 'user.settings.security.password_reset.content_title'|trans }}</h2></div>
-				
+
 				<form id="password-reset-update-form" class="form-vertical" method="post">
-					
+
 					{{ web_macro.flash_messages() }}
-					
+
 					<div class="form-group">
 						{{ form_label(form.password, 'user.settings.security.password_modify.new_password'|trans, {label_attr:{class:'control-label'}}) }}
 						<div class="controls">
 							{{ form_widget(form.password, {attr:{class:'form-control'}}) }}
-              <p class="help-block">{{ ('user.settings.password_level.'~setting('auth.password_level')|default('low'))|trans }}</p>
+              <p class="help-block">{{ 'user.settings.password_level.high'|trans }}</p>
 						</div>
 					</div>
-					
+
 					<div class="form-group">
 						{{ form_label(form.confirmPassword, 'user.settings.security.password_modify.confirm_password'|trans, {label_attr:{class:'control-label'}}) }}
 						<div class="controls">
