--- a/app/Resources/views/settings/password.html.twig
+++ b/app/Resources/views/settings/password.html.twig
@@ -27,7 +27,7 @@
         <label for="form_newPassword">
           {{'user.settings.security.password_modify.new_password'|trans}}
       </label>
-        <input type="password" id="form_newPassword" name="newPassword" required="required" class="form-control" placeholder="{{ ('user.settings.password_level.'~setting('auth.password_level')|default('low'))|trans }}">
+        <input type="password" id="form_newPassword" name="newPassword" required="required" class="form-control" placeholder="{{ 'user.settings.password_level.high'|trans }}">
       </div>
 
       <div class="form-group cd-form-group cd-mb24">
@@ -36,7 +36,6 @@
         </label>
         <input type="password" id="form_confirmPassword" name="confirmPassword" required="required" class="form-control" placeholder="{{'user.settings.security.password_modify.confirm_password_placeholder'|trans}}">
       </div>
-      <input type="hidden" id="password_level" value="{{ setting('auth.password_level')|default('low') }}">
       <input type="hidden" name="_csrf_token" value="{{ csrf_token('site') }}">
     </form>
   {% endif %}
